[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/InterfaceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Exports/menu_background.png" type="Texture" id=3]
[ext_resource path="res://UI/Fonts/Yellowtail-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0.933333, 0.933333, 0.933333, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 305.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.121569, 0.121569, 1 )
text = "California Drivers"
align = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 305.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.14902, 0.494118, 1 )
text = "0000000"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 305.0
margin_bottom = 84.0
custom_constants/separation = 5

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 305.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 2 )
text = "P L A Y"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 305.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 2 )
text = "Q U I T"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
